# Better-Minecraft-Bedrock-Launcher

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.en.md  README.md  build.rs  cog.toml  commitlint.config.cjs  downloader_manager.rs  import.html  index.html  mc_dependency.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
.cargo/: config.toml
.githooks/: commit-msg
crates/bmcbl-plugin-api/: Cargo.toml
crates/bmcbl-plugin-api/src/: lib.rs  pack.rs
crates/bmcbl-plugin-macros/: Cargo.toml
crates/bmcbl-plugin-macros/src/: lib.rs
crates/gpui-hooks/: Cargo.toml  README.md
crates/gpui-hooks-macros/: Cargo.toml
crates/gpui-hooks-macros/src/: lib.rs
crates/gpui-hooks/src/: element.rs  lib.rs
crates/gpui-hooks/src/hooks/: dependency.rs  handles.rs  mod.rs  storage.rs  tests.rs  use_callback.rs  use_effect.rs  use_memo.rs  use_reducer.rs  use_ref.rs  use_state.rs
crates/lucide-gpui/: Cargo.toml  build.rs  update-icons.ps1
crates/lucide-gpui/src/: lib.rs
crates/nova-gfx/examples/atlas-smoke/: Cargo.toml
crates/nova-gfx/examples/atlas-smoke-metal/: Cargo.toml
crates/nova-gfx/examples/atlas-smoke-metal/src/: main.rs
crates/nova-gfx/examples/atlas-smoke/src/: main.rs
crates/nova-gfx/examples/gpui-minimal-window-smoke/: Cargo.toml
crates/nova-gfx/examples/gpui-minimal-window-smoke/src/: main.rs
crates/nova-gfx/examples/triangle/: Cargo.toml
crates/nova-gfx/examples/triangle-dx12/: Cargo.toml
crates/nova-gfx/examples/triangle-dx12/src/: main.rs
crates/nova-gfx/examples/triangle-metal/: Cargo.toml
crates/nova-gfx/examples/triangle-metal/src/: main.rs
crates/nova-gfx/examples/triangle/src/: main.rs
crates/nova-gfx/gfx-core/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-core/src/: backend.rs  gfx_core.rs
crates/nova-gfx/gfx-dx12/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-dx12/src/: device.rs  error.rs  gfx_dx12.rs
crates/nova-gfx/gfx-memory/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-memory/src/: allocator.rs  common.rs  deferred.rs  dx12.rs  gfx_memory.rs  metal.rs  upload.rs  vulkan.rs
crates/nova-gfx/gfx-metal/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-metal/src/: device.rs  error.rs  gfx_metal.rs  registry.rs
crates/nova-gfx/gfx-opengl/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-opengl/src/: device.rs  error.rs  gfx_opengl.rs
crates/nova-gfx/gfx-shader/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-shader/src/: gfx_shader.rs
crates/nova-gfx/gfx-vulkan/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-vulkan/src/: device.rs  error.rs  gfx_vulkan.rs  registry.rs
crates/nova-gfx/gfx-webgl/: Cargo.toml  README.md  README.zh-CN.md
crates/nova-gfx/gfx-webgl/src/: device.rs  error.rs  gfx_webgl.rs
docs/: AI.md  ARCHITECTURE_BOUNDARIES.md  BMCBL_PROJECT_STRUCTURE.md  COMMIT_CONVENTIONS.md  GPUI_ROUTER_HOOKS.md  GPUI_VENDOR_RENDERING.md  GPUI_VNEXT_MIGRATION.md  GPUI_VNEXT_MIGRATION.zh-CN.md  LINUX_SUPPORT.md  MAP_RENDERER.md  PROJECT_SPEC.md  commit-messages.md
examples/plugins/bedrock-notes/: Cargo.toml  README.md  README.zh-CN.md
examples/plugins/bedrock-notes/lang/: en-US.lang  zh-CN.lang
examples/plugins/bedrock-notes/src/: lib.rs
examples/plugins/hello-wasm/: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs
examples/plugins/hello-wasm/config/: default.toml  schema.toml
examples/plugins/hello-wasm/lang/: en-US.lang  ja-JP.lang  ko-KR.lang  zh-CN.lang  zh-TW.lang
examples/plugins/hello-wasm/src/: lib.rs
public/: SplashScreen.html
scripts/: check_i18n_lang.ps1  (+7 more)
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: curseforge.rs  lib.rs  main.rs  result.rs
src-tauri/src/BMCBL/config/: settings.toml
src-tauri/src/archive/: commands.rs  mod.rs  zip.rs
src-tauri/src/commands/: app_info.rs  cancel_install.rs  config.rs  download.rs  http_client.rs  i18n.rs  import_appx.rs  mc_dll_mods.rs  mc_map.rs  mc_pack.rs  minecraft.rs  mod.rs  music.rs  online.rs  online_acl.rs  plugin.rs  splashscreen.rs  system.rs  version.rs  webview2.rs  window.rs  zip.rs
src-tauri/src/config/: config.rs
src-tauri/src/core/: mod.rs  result.rs
src-tauri/src/core/downloads/: cancel.rs  manager.rs  mod.rs  multi.rs  single.rs
src-tauri/src/core/downloads/WuClient/: client.rs  protocol.rs
src-tauri/src/core/easytier/: mod.rs  runtime.rs  runtime_assets.rs
src-tauri/src/core/inject/: inject.rs  pe.rs
src-tauri/src/core/minecraft/: assets.rs  commands.rs  import.rs  key_patcher.rs  map.rs  mod.rs  mod_manager.rs  mouse_lock.rs  nbt.rs  paths.rs  resource_packs.rs  utils.rs  uwp_minimize_fix.rs
src-tauri/src/core/minecraft/appx/: extract_zip.rs  mod.rs  register.rs  remove.rs  utils.rs
src-tauri/src/core/minecraft/gdk/: commands.rs  decoder.rs  header.rs  key.rs  mod.rs  stream.rs  structs.rs
src-tauri/src/core/minecraft/launcher/: mod.rs  start.rs
src-tauri/src/core/version/: gdk_users.rs  mod.rs  settings.rs  version_manager.rs
src-tauri/src/downloads/: cancel.rs  commands.rs  manager.rs  md5.rs  mod.rs  multi.rs  single.rs
src-tauri/src/downloads/WuClient/: client.rs  protocol.rs
src-tauri/src/downloads/wu_client/: client.rs  protocol.rs
src-tauri/src/http/: commands.rs  mod.rs  proxy.rs  request.rs
src-tauri/src/i18n/: mod.rs
src-tauri/src/i18n/locales/: en-US.ftl  zh-CN.ftl
src-tauri/src/plugins/: callbacks.rs  commands.rs  interface.rs  manager.rs  mod.rs  models.rs  plugin_manager.rs
src-tauri/src/progress/: download_progress.rs  extract_progress.rs  install_progress.rs  mod.rs
src-tauri/src/tasks/: commands.rs  mod.rs  task_manager.rs
src-tauri/src/utils/: app_handle.rs  app_info.rs  appx_dependency.rs  cloudflare.rs  config.rs  developer_mode.rs  file_ops.rs  logger.rs  mc_dependency.rs  mod.rs  network.rs  npcap.rs  registry.rs  stats.rs  system_info.rs  updater.rs  utils.rs  webview2_manager.rs
src-tauri/windows/: installer.nsi
(+629 files in other folders)
