[package]
name = "better_minecraft_bedrock_launcher"
version = "0.0.10"
license = "GPL-3.0-only"
description = "一个minecraft bedrock启动器"
authors = ["Chlna666"]
edition = "2021"
build = "build.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
chrono = "0.4.42"
hex = "0.4.3"
tauri-build = { version = "2.5.3", features = [] }

[target.'cfg(windows)'.dependencies]
runas = "=1.0.0"
deelevate = "0.2.0"
winreg = "0.55.0"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-single-instance = "2.0.0"

[dependencies]
tauri = { version = "2.9.5", features = ["unstable", "devtools", "protocol-asset"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"

serde = { version = "1.0.219", features = ["derive"] }
sysinfo = "0.37.2"
toml = "0.9.8"
once_cell = "1.21.3"
chrono = "0.4.42"
lazy_static = "1.5.0"
windows = { version = "0.62.2", features = ["Win32_System_LibraryLoader", "Win32_System_Com", "Win32_Foundation", "Data_Xml_Dom", "Management", "Management_Deployment", "Foundation_Collections", "Win32", "Win32_Data_Xml", "ApplicationModel", "Win32_System_SystemInformation", "Win32_System_Registry", "Win32_UI_WindowsAndMessaging", "ApplicationModel_Activation", "Win32_System_Diagnostics_ToolHelp", "Win32_Security", "Win32_UI_Controls", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Globalization", "Win32_System_Threading", "Win32_UI_Input", "Win32_UI_Input_KeyboardAndMouse", "Win32_Security_Authorization", "Win32_System_Diagnostics_Debug", "Win32_Storage", "Win32_System_Memory", "Win32_Storage_FileSystem"] }
serde_json="1.0.145"
zip = "6.0.0"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tokio = { version = "1.48.0", features = ["rt", "rt-multi-thread", "macros"] }
tokio-stream = { version = "0.1.17", features = ["fs"] }
reqwest = { version = "0.12.25", features = ["stream", "gzip", "brotli", "deflate", "json"] }
futures = "0.3.31"
futures-util = "0.3.31"
xmltree = "0.12.0"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4"] }
num_cpus = "1.16.0"
regex = "1.12.2"
anyhow = "1.0.100"

fluent-bundle = "0.16"
unic-langid = "0.9"
rayon = "1.11.0"
indexmap = { version = "2.12.1", features = ["serde"] }
walkdir = "2.5.0"
md5 = "0.8.0"
semver = "1.0.27"
hex = "0.4.3"
aes = "0.8.4"
clap = { version = "4.5.53", features = ["derive"] }



[profile.release]
opt-level = "s"        # 优化代码体积 ("s" = 小体积, "z" = 最小体积)
lto = "fat"         # 启用 Link Time Optimization
codegen-units = 1       # 单代码生成单元，有助于优化整个 crate
panic = "abort"         # 遇到 panic 直接 abort，而不是展开堆栈（减少体积）
strip = true            # 移除调试符号（从 Rust 1.73 起支持）


[profile.dev]
panic = "abort"         # 开发模式也可关闭堆栈展开（调试少用）
