[package]
name = "gpui_hooks_macros"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.111", features = ["full"] }

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
