[package]
name = "lucide-gpui"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
build = "build.rs"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
gpui = { path = "../../vendor/gpui", default-features = false }
anyhow = "1.0.100"

[build-dependencies]
anyhow = "1.0.100"
