[package]
name = "gfx-metal"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "Metal backend for nova-gfx"
readme = "README.md"
documentation = "https://docs.rs/gfx-metal"
keywords = ["graphics", "gpu", "metal", "rendering", "backend"]
categories = ["rendering::graphics-api"]
include = ["src/**", "Cargo.toml", "README.md", "README.zh-CN.md"]

[lib]
path = "src/gfx_metal.rs"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
gfx-core = { version = "0.1.0", path = "../gfx-core" }
thiserror = "2.0.17"

[target.'cfg(target_vendor = "apple")'.dependencies]
gfx-memory = { version = "0.1.0", path = "../gfx-memory", default-features = false, features = ["metal"] }
objc2 = { version = "0.6", default-features = false }
objc2-app-kit = { version = "0.3", default-features = false, features = ["NSView"] }
objc2-core-foundation = { version = "0.3", default-features = false, features = ["CFCGTypes"] }
objc2-core-graphics = { version = "0.3", default-features = false, features = ["CGGeometry"] }
objc2-foundation = { version = "0.3", default-features = false, features = ["NSError", "NSObject", "NSString"] }
objc2-metal = { version = "0.3", default-features = false, features = ["MTLBuffer", "MTLCommandBuffer", "MTLCommandEncoder", "MTLCommandQueue", "MTLDevice", "MTLDrawable", "MTLLibrary", "MTLPixelFormat", "MTLRenderCommandEncoder", "MTLRenderPass", "MTLRenderPipeline", "MTLTexture", "std"] }
objc2-quartz-core = { version = "0.3", default-features = false, features = ["CALayer", "CAMetalLayer", "objc2-metal"] }
raw-window-handle = "0.6"
