[package]
name = "gfx-webgl"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
description = "WebGL backend for nova-gfx"
readme = "README.md"
documentation = "https://docs.rs/gfx-webgl"
keywords = ["graphics", "gpu", "webgl", "rendering", "backend"]
categories = ["rendering::graphics-api"]
include = ["src/**", "Cargo.toml", "README.md", "README.zh-CN.md"]

[lib]
path = "src/gfx_webgl.rs"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
gfx-core = { version = "0.1.0", path = "../gfx-core" }
thiserror = "2.0.17"
