[package]
name = "nova-triangle-dx12"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"
description = "nova-gfx Direct3D 12 triangle baseline"
publish = false

[[bin]]
name = "nova-triangle-dx12"
path = "src/main.rs"

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"

[dependencies]
gfx-core = { path = "../../gfx-core" }
gfx-dx12 = { path = "../../gfx-dx12" }
gfx-shader = { path = "../../gfx-shader" }
raw-window-handle = "0.6"
sysinfo = "0.39.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_WindowsAndMessaging"] }
